--- a/payment-master/src/main/resources/application.yml
+++ b/payment-master/src/main/resources/application.yml
@@ -12,6 +12,9 @@ spring:
     url: jdbc:mysql://localhost:32003/sba_payment?useSSL=true
     username: root
     password: 123456
+spring.jpa:
+  show-sql: true
+  hibernate.ddl-auto: update
 server:
   servlet:
     context-path: /payment
