Will-Fix upon comments

--- a/account-master/src/main/resources/application.yml
+++ b/account-master/src/main/resources/application.yml
@@ -52,6 +52,9 @@ spring:
     url: jdbc:mysql://sba-account-db:3306/sba_account?useSSL=true&useUnicode=true&characterEncoding=utf-8
     username: root
     password: 123456
+spring.jpa:
+  show-sql: true
+  hibernate.ddl-auto: update
 server:
   servlet:
     context-path: /account
