--- a/payment-master/src/main/resources/application.yml
+++ b/payment-master/src/main/resources/application.yml
@@ -57,9 +57,12 @@ spring:
     name: sba-payment
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://sba-payment-db:3306/sba_payment?useSSL=true&useUnicode=true&characterEncoding=utf-8
+    url: jdbc:mysql://sba-payment-mysql:3306/sba_payment?useSSL=true
     username: root
     password: 123456
+spring.jpa:
+  show-sql: true
+  hibernate.ddl-auto: update
 server:
   servlet:
     context-path: /payment
