--- a/auth-master/src/main/resources/application.yml
+++ b/auth-master/src/main/resources/application.yml
@@ -34,7 +34,11 @@ management:
       show-details: ALWAYS
 
 swagger.enabled: true
-  
+
+feign.client.config.default:
+  connect-timeout: 20000
+  read-timeout: 20000
+
 ---
 spring:
   profiles: k8s
@@ -68,3 +72,6 @@ management:
 
 swagger.enabled: true
 
+feign.client.config.default:
+  connect-timeout: 20000
+  read-timeout: 20000
